--- a/RMarkdown demo.Rmd
+++ b/RMarkdown demo.Rmd
@@ -52,7 +52,10 @@ The sum of 2 and 2 is `r 2+2` and today's date is **`r Sys.Date()`**.
 
 # Hyperlinks
 
-Packages for templates  are [`rmdformats`](https://github.com/juba/rmdformats) and [`prettydoc`](https://github.com/yixuan/prettydoc).
+Packages for templates  are [`rmdformats`](https://github.com/juba/rmdformats) and [`prettydoc`](https://github.com/yixuan/prettydoc).  
+
+`install.packages("rmdformats")`
+`install.packages("prettydoc")`
 
 # Images 
 
